@startuml

title __EDELHOME's Class Diagram__\n

  namespace com.example.edelhome {
    class com.example.edelhome.ExampleDialog {
        - database : FirebaseDatabase
        - editTextUsername : EditText
        - editTextip : EditText
        - firebaseAuth : FirebaseAuth
        - reference : DatabaseReference
        + getEditTextUsername()
        + onAttach()
        + onCreateDialog()
        + setEditTextUsername()
    }
  }
  

  namespace com.example.edelhome {
    class com.example.edelhome.MainActivity {
        - firebaseAuth : FirebaseAuth
        - mAppBarConfiguration : AppBarConfiguration
        - textViewemail : TextView
        - textViewname : TextView
        + onCreateOptionsMenu()
        + onSupportNavigateUp()
        + onWindowFocusChanged()
        # onCreate()
    }
  }
  

  namespace com.example.edelhome {
    class com.example.edelhome.SecondActivity {
        {static} + URLSTRING : String
        ~ cancel : Button
        ~ email : EditText
        ~ nName : EditText
        ~ password : EditText
        ~ regis : Button
        ~ tel : EditText
        ~ vName : EditText
        # onCreate()
        - reg()
    }
  }
  

  com.example.edelhome.ExampleDialog -up-|> androidx.appcompat.app.AppCompatDialogFragment
  com.example.edelhome.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.edelhome.SecondActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
